[package]
name = "libpostal-sys"
version = "0.1.3"
authors = ["Evgeny Duzhakov <diaevd@gmail.com>"]
description = "Native bindings to the libpostal library"
edition = "2018"
links = "postal"
build = "build.rs"

[lib]
name = "libpostal_sys"

[dependencies]
libc = "0.2.50"

[build-dependencies]
pkg-config = "0.3.14"

[features]
default = []
static = []
